<resources>
    <string name="app_name">Convidados</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="all_guests">Todos os convidados</string>
    <string name="menu_present">Presente</string>
    <string name="menu_absent">Ausentes</string>
    <string name="nome">Nome: </string>
    <string name="presente">Presente</string>
    <string name="ausente">Ausente</string>
    <string name="salvar">Salvar</string>
    <string name="presenca">Presença:  </string>
</resources>